@@ -19,6 +19,7 @@
  * The meta icon setting "Inherit failed condition opacity" has been removed. Meta icons will now always inherit the exact opacity of the icons they are showing, though this can be overridden by the meta icon's opacity settings.
  * Complex chains of meta icon inheritance should now be handled much better, especially when some of the icons have animations on them.
 
+ * You can now anchor groups to the cursor.
  * The duration of Diminishing Returns is now customizable in TMW's main options.
  * You can now right-click-and-drag the group resize handle to easily change the number of rows and columns of a group.
  * Added group settings that allow you to specify when a group should be shown based on the role that your current specialization fulfills.
